default dataset dir $HOME/datasets

--- a/cfg/ae/vctk.yaml
+++ b/cfg/ae/vctk.yaml
@@ -73,8 +73,8 @@ ckpt_path: null
 data:
   class_path: ltng.data.Libri
   init_args:
-    batch_size: 64
-    wav_dir: /mnt/wsl/PhysicalDrive3p1/datasets/LibriMix_data/LibriSpeech
+    batch_size: 128
+    wav_dir: ${oc.env:HOME, ???}/datasets
     duration: 2.0
     overlap: 1.5
     noise_snr: [0.0, 10.0]
